REFACTOR: search page

--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="cart p-2 w-full">
+<div class="cart p-2 w-full min-h-screen">
     <div class="text-black">
         {% include 'nav.html' %}
     </div>
