--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="footer flex flex-col bg-backgroundSecondary w-full text-white absolute bottom-0 p-10 md:px-16 xl:px-44 2xl:px-60 h-fit" id="footer">
+<div class="footer flex flex-col bg-backgroundSecondary w-full text-white  p-10 md:px-16 xl:px-44 2xl:px-60 h-fit" id="footer">
     <div class="flex flex-col md:flex-row items-start md:items-start justify-between">
         <div class="social flex md:flex-col">
             <div class='my-2'>
