--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -32,7 +32,7 @@
 
 			{% endblock %}
 		</div>
-		 
+		{% include 'footer.html' %}
 	</body>
 	<!--Bootstrap JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
