--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="nav z-10 absolute top-10 flex flex-row px-11 md:px-16 xl:px-64  justify-between w-full text-xl xl:text-2xl text-textPrimary">
+<nav class="nav z-10  flex flex-row mt-20 px-11 md:px-16 xl:px-64  justify-between w-full text-xl xl:text-2xl text-textPrimary">
         <div class="logo">
             <h1>Art Lounge</h1>
         </div>
