--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="cart p-2 w-full min-h-screen">
+<div class="cart p-2 w-full h-fit min-h-screen">
     <div class="text-black">
         {% include 'nav.html' %}
     </div>
 
-    <div class="cart-items relative top-36 md:px-16 xl:px-56 w-full flex flex-col items-start">
+    <div class="cart-items relative  md:px-16 xl:px-56 w-full flex flex-col items-start">
     {% if cart_items %}
         <div class="flex pb-10">
             <p class="text-textSecondary">Cart</p>
@@ -17,8 +17,8 @@
         </div>
         <div class="flex justify-between w-full">
             <div class="text-xl">
-                <p>Items: {{cart.cart_items}}</p>
-                <p>Cart Total: {{cart.cart_total}}</p>
+                <p>Items: <span class="cart_items"> {{cart.cart_items}}</span></p>
+                <p>Cart Total: <span class="cart_total"> {{cart.cart_total}} </span></p>
             </div>
             <div class="group w-1/2">
                 <a href="/shop/checkout" class="text-textPrimary hover:text-textSecondary flex justify-center">
