--- a/shop/templates/product_detail.html
+++ b/shop/templates/product_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% include 'nav.html' %}
-<div class="p-5 md:p-20 flex flex-col items-center mt-32 md:mt-60 relative">
+<div class="p-5 md:p-20 flex flex-col items-center  relative">
     
     <div class="flex flex-col items-start">
         <div class="back flex justify-start items-center cursor-pointer group my-10">
@@ -32,7 +32,5 @@
         </div>
     </div>
 </div>
-<script>
 
-</script>
 {% endblock %}
