--- a/shop/templates/product_per_category.html
+++ b/shop/templates/product_per_category.html
@@ -2,10 +2,10 @@
 
 
 {% block content %}
-<div class="w-full text-white relative min-h-screen">
+<div class="w-full text-white relative min-h-screen ">
     {% include 'nav.html' %}
 
-    <div class="pb-32 grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap products px-10 sm:px-20 md:px-40 items-center">
+    <div class="grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap products px-10 sm:px-20 md:px-40 items-center">
         <div class="m-5 text-black">
             <div class="categories text-textPrimary">
                 <ul>
@@ -22,7 +22,6 @@
         {% endfor %}
         
     </div>
-    
 </div>
 
 {% endblock %}
