--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -2,10 +2,10 @@
 {% load static %}
 
 {% block content %}
-<div class="shop w-full text-black relative h-fit text-textPrimary">
+<div class="shop w-full  relative h-fit text-textPrimary">
     
     {% include 'nav.html' %}
-    <div class="products text-textPrimary px-3 md:px-20 flex flex-col items-center text-black pb-64 md:pb-44 xl:pb-10 h-fit ">
+    <div class="products px-3 md:px-20 flex flex-col items-center h-fit ">
         {% if latest_product %}
             <div class="flex flex-col items-start text-textPrimary">
 
@@ -44,12 +44,12 @@
                     
                     {% endfor %}
                 </div>
-                <div class="mt-10">
+                <a class="mt-10" href="/shop/products">
                     <button class="border-2 flex group py-2 px-4 w-56 bg-black text-white">
                         <p> View All</p>
                         <i class="uil uil-arrow-right group-hover:translate-x-14 group-hover:visible transform duration-300 ease-in-out ml-2"></i>
                     </button>
-                </div>
+                </a>
             </div>
             {% endif %}
 
@@ -57,13 +57,13 @@
                 <a href="/shop/category/Painting" class="hover:text-black w-2/3 md:w-96">
                     <div class="relative group">
                         <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/artwork-display.jpg' %}" alt="">
-                        <p class="absolute bottom-5 left-3 font-bold  underline group-hover:scale-110 transition duration-300 ease-in-out">ARTWORKS</p>
+                        <p class="absolute bottom-5 left-3 font-bold text-black underline group-hover:scale-110 transition duration-300 ease-in-out">ARTWORKS</p>
                     </div>
                 </a>
                 <a href="/shop/category/T-Shirt" class="hover:text-black w-1/3 md:w-64">
                     <div class="relative group">
                         <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/tshirts-display.jpg' %}" alt="">
-                        <p class="absolute bottom-5 left-3 font-bold underline group-hover:scale-110 transition duration-300 ease-in-out">T-SHIRTS</p>
+                        <p class="absolute bottom-5 left-3 text-black font-bold underline group-hover:scale-110 transition duration-300 ease-in-out">T-SHIRTS</p>
                     </div>
                 </a>
             </div> 
