--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -6,31 +6,25 @@
         {% include 'nav.html' %}
     </div>
 
-    <div class="cart-items relative  md:px-16 xl:px-56 w-full flex flex-col items-start">
+    <div class="cart-items relative  md:px-16 xl:px-56 w-full flex flex-col mb-20 items-start">
     {% if cart_items %}
-        <div class="flex pb-10">
+        <div class="flex pb-10 text-xl">
             <p class="text-textSecondary">Cart</p>
             <i class="uil uil-angle-right"></i>
             <p>Checkout</p>
             <i class="uil uil-angle-right"></i>
             <p>Payment</p>
         </div>
-        <div class="flex justify-between w-full">
-            <div class="text-xl">
+        <div class="flex justify-start w-full  mb-10">
+            <div class="text-xl flex flex-col items-start border-b border-backgroundSecondary">
                 <p>Items: <span class="cart_items"> {{cart.cart_items}}</span></p>
                 <p>Cart Total: <span class="cart_total"> {{cart.cart_total}} </span></p>
             </div>
-            <div class="group w-1/2">
-                <a href="/shop/checkout" class="text-textPrimary hover:text-textSecondary flex justify-center">
-                    <p class="mr-3">Checkout</p>
-                    <i class="uil uil-arrow-right group-hover:translate-x-4 transition duration-300 ease-in-out"></i>
-                </a>
-            </div>
         </div>
         {% for item in cart_items %}
-        <div id="{{item.product.id}}" class="cart-item my-10 flex items-center justify-between p-3 w-full border border-backgroundSecondary rounded-lg">
-            <div class="item-img w-1/4 md:w-52">
-                <img src="{{item.product.image_url}}" alt="{{item.product.name}} image">
+        <div id="{{item.product.id}}" class="cart-item mb-10 flex items-center justify-between p-3 w-full h-72 border-b border-backgroundSecondary">
+            <div class="item-img h-full">
+                <img src="{{item.product.image_url}}" class="h-full" alt="{{item.product.name}} image">
             </div>
             <div>
                 <h1 class="font-medium text-xl">{{item.product.name}}</h1>
@@ -46,9 +40,23 @@
             </div>
         </div>
         {% endfor %}
+        <div class="group flex justify-end">
+            <a href="/shop/checkout" class="text-textPrimary hover:text-textSecondary">
+                <button class="flex justify-between bg-backgroundSecondary px-4 py-2 mr-5 rounded-lg w-fit">
+                    <p class="mr-3">Continue shopping</p>
+                </button>
+            </a>
+
+            <a href="/shop/checkout" class="text-textPrimary hover:text-textSecondary">
+                <button class="flex justify-start bg-textSecondary text-backgroundSecondary px-4 py-2 rounded-lg w-fit">
+                    <p class="mr-3">Checkout</p>
+                    <i class="uil uil-arrow-right group-hover:translate-x-4 transition duration-300 ease-in-out"></i>
+                </button>
+            </a>
+        </div>
     {% else %}
-    <div>
-        <div class="back flex justify-start items-center cursor-pointer group my-10">
+    <div class="py-20">
+        <div class="back flex justify-start items-center cursor-pointer group">
             <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
             <p class="ml-2">Continue shopping</p>
         </div>
