--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -6,6 +6,48 @@
     
     {% include 'nav.html' %}
     <div class="products px-3 md:px-20 flex flex-col items-center h-fit ">
+        {% if best_sellers %}
+        
+        <div class="flex flex-col items-center mt-40 text-textPrimary">
+            <h1 class="text-2xl p-10 underline">Best sellers</h1>
+        
+            <div
+                class="best-sellers grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap sm:px-20 md:px-40 items-center">
+                {% for product in best_sellers %}
+        
+                {% include 'product.html' %}
+        
+                {% endfor %}
+            </div>
+            <a class="mt-10" href="/shop/products">
+                <button class="border-2 flex group py-2 px-4 w-56 bg-black text-white">
+                    <p> View All</p>
+                    <i
+                        class="uil uil-arrow-right group-hover:translate-x-14 group-hover:visible transform duration-300 ease-in-out ml-2"></i>
+                </button>
+            </a>
+        </div>
+        {% endif %}
+        <div class="w-full flex my-32 justify-center">
+            <a href="/shop/category/Painting" class="hover:text-black w-2/3 md:w-96">
+                <div class="relative group">
+                    <img class="group-hover:opacity-50 transition duration-300 ease-in-out"
+                        src="{% static 'backgrounds/artwork-display.jpg' %}" alt="">
+                    <p
+                        class="absolute bottom-5 left-3 font-bold text-black underline group-hover:scale-110 transition duration-300 ease-in-out">
+                        ARTWORKS</p>
+                </div>
+            </a>
+            <a href="/shop/category/T-Shirt" class="hover:text-black w-1/3 md:w-64">
+                <div class="relative group">
+                    <img class="group-hover:opacity-50 transition duration-300 ease-in-out"
+                        src="{% static 'backgrounds/tshirts-display.jpg' %}" alt="">
+                    <p
+                        class="absolute bottom-5 left-3 text-black font-bold underline group-hover:scale-110 transition duration-300 ease-in-out">
+                        T-SHIRTS</p>
+                </div>
+            </a>
+        </div>
         {% if latest_product %}
             <div class="flex flex-col items-start text-textPrimary">
 
@@ -32,41 +74,9 @@
             </div>
             {% endif %}
 
-            {% if best_sellers %}
+            
 
-            <div class="flex flex-col items-center mt-40 text-textPrimary">
-                <h1 class="text-2xl p-10 underline">Best sellers</h1>
-
-                <div class="best-sellers grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap sm:px-20 md:px-40 items-center">
-                    {% for product in best_sellers %}
-        
-                    {% include 'product.html' %}
-                    
-                    {% endfor %}
-                </div>
-                <a class="mt-10" href="/shop/products">
-                    <button class="border-2 flex group py-2 px-4 w-56 bg-black text-white">
-                        <p> View All</p>
-                        <i class="uil uil-arrow-right group-hover:translate-x-14 group-hover:visible transform duration-300 ease-in-out ml-2"></i>
-                    </button>
-                </a>
-            </div>
-            {% endif %}
-
-            <div class="w-full flex mt-32 justify-center">
-                <a href="/shop/category/Painting" class="hover:text-black w-2/3 md:w-96">
-                    <div class="relative group">
-                        <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/artwork-display.jpg' %}" alt="">
-                        <p class="absolute bottom-5 left-3 font-bold text-black underline group-hover:scale-110 transition duration-300 ease-in-out">ARTWORKS</p>
-                    </div>
-                </a>
-                <a href="/shop/category/T-Shirt" class="hover:text-black w-1/3 md:w-64">
-                    <div class="relative group">
-                        <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/tshirts-display.jpg' %}" alt="">
-                        <p class="absolute bottom-5 left-3 text-black font-bold underline group-hover:scale-110 transition duration-300 ease-in-out">T-SHIRTS</p>
-                    </div>
-                </a>
-            </div> 
+            
     </div>
     
 </div>
