--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,8 +7,8 @@
                <a href="/shop" class="mr-10 hover:text-textSecondary">Home</a>
                <a href="/shop/about" class="mr-10 hover:text-textSecondary">About</a>
                 <div class="dropdown flex flex-col relative justify-between  mr-10">
-                    <a href="/shop/products" class="hover:text-textSecondary">Products <i class="uil uil-angle-double-down"></i></a>
-                    <div class="dropdown-items flex flex-col items-end">
+                    <a href="/shop/products" class="hover:text-textSecondary"> <i class="uil uil-angle-double-down"></i> Products</a>
+                    <div class="dropdown-items flex flex-col items-start">
                         <a href="/shop/category/Painting" class="hover:text-textSecondary">Paintings</a>
                         <a href="/shop/category/T-Shirt" class="hover:text-textSecondary">T-Shirts</a>
                     </div>
