--- a/templates/product.html
+++ b/templates/product.html
@@ -1,6 +1,6 @@
 <a href="/shop/product/{{product.id}}" class="text-textPrimary hover:text-black">
-<div class="hover:scale-125 group transition duration-300 ease-in-out m-3 p-2 xl:w-60 rounded-none h-fit text-black">
-    <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-none group-hover:opacity-80 transition duration-300 ease-in">
+<div class="hover:scale-110 group transition duration-300 ease-in-out my-20 p-2  h-72 rounded-lg  text-black">
+    <img src="{{product.image_url}}" alt="{{product.name}}-image" class="h-full rounded-none group-hover:opacity-80 transition duration-300 ease-in">
     <div class="flex justify-between items-center text-textPrimary">
         <div class="p-3">
             <h2 class="font-semibold">{{product.name}}</h2>
