REFACTOR: color pallet

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="dashboard flex flex-col p-2">
+<div class="dashboard flex flex-col p-2 min-h-screen">
 
     <div class="header flex justify-between px-64 my-20">
         <div class="greeting">
