--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="shop w-full  relative h-fit text-textPrimary">
+<div class="shop w-full mb-20 relative h-fit text-textPrimary">
     
     {% include 'nav.html' %}
     <div class="products px-3 md:px-20 flex flex-col items-center h-fit ">
