--- a/shop/templates/product_detail.html
+++ b/shop/templates/product_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% include 'nav.html' %}
-<div class="p-5 md:p-20 flex flex-col items-center  relative">
+<div class="p-5 md:p-20 flex flex-col items-center  relative min-h-screen">
     
     <div class="flex flex-col items-start">
         <div class="back flex justify-start items-center cursor-pointer group my-10">
