--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 * {
-    font-family: 'Libre Baskerville', serif;
+    font-family: 'Rubik', sans-serif;
 }
 
 .logo h1 {
