--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -15,6 +15,7 @@
 			integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 		<!-- Tailwind css -->
 		{% tailwind_css %}
+		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	</head>
 
 	<body class="bg-backgroundPrimary text-textPrimary">
