--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -5,7 +5,7 @@
 
     <div class="header flex justify-between px-64 my-20">
         <div class="greeting">
-            <h1 class="text-2xl font-bold">Good Morning James</h1>
+            <h1 class="text-2xl font-bold">Good Morning Veanne</h1>
         </div>
         <div class="nav">
             <ul class="flex justify-between invisible">
