--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,33 +1,33 @@
 {% load static %}
-<div class="footer flex flex-col bg-backgroundSecondary w-full text-white  p-10 md:px-16 xl:px-44 2xl:px-60 h-fit" id="footer">
+<div class="footer flex flex-col bg-backgroundSecondary w-full text-textSecondary  p-10 md:px-16 xl:px-44 2xl:px-60 h-fit" id="footer">
     <div class="flex flex-col md:flex-row items-start md:items-start justify-between">
         <div class="social flex md:flex-col">
             <div class='my-2'>
                 <i class="uil uil-instagram"></i>
-                <a class="hover:text-textSecondary" href="#">@artlonge</a>
+                <a class="hover:text-black" href="#">@veannes</a>
             </div>
             <div class='my-2'>
                 <i class="uil uil-twitter-alt"></i>
-                <a class="hover:text-textSecondary" href="#">@artlonge</a>
+                <a class="hover:text-black" href="#">@veannes</a>
             </div>
             <div class='my-2'>
                 <i class="uil uil-envelope"></i>
-                <a class="hover:text-textSecondary" href="#">@artlonge</a>
+                <a class="hover:text-black" href="#">@veannes</a>
             </div>
         </div>
         <div class="site-map flex flex-col md:flex-row md:justify-between flex-wrap items-start md:ml-20 xl:ml-52 m-2">
             <div class="flex flex-col p-2 md:p-12">
-                <a class="hover:text-textSecondary" href="/shop">Home</a>
-                <a class="hover:text-textSecondary" href="/shop/about">About</a>
-                <a class="hover:text-textSecondary" href="/shop/products">Products</a>
-                <a class="hover:text-textSecondary" href="/shop/cart">Cart</a>
-                <a class="hover:text-textSecondary" href="/shop/products#search">Find product</a>
+                <a class="hover:text-black" href="/shop">Home</a>
+                <a class="hover:text-black" href="/shop/about">About</a>
+                <a class="hover:text-black" href="/shop/products">Products</a>
+                <a class="hover:text-black" href="/shop/cart">Cart</a>
+                <a class="hover:text-black" href="/shop/products#search">Find product</a>
             </div>
             <div class="flex flex-col p-2 md:p-12">
-                <a class="hover:text-textSecondary" href="/shop/contact">Coutact us</a>
-                <a class="hover:text-textSecondary" href="#">Shipping policy</a>
-                <a class="hover:text-textSecondary" href="#">Privacy policy</a>
-                <a class="hover:text-textSecondary" href="#">Refund policy</a>
+                <a class="hover:text-black" href="/shop/contact">Coutact us</a>
+                <a class="hover:text-black" href="#">Shipping policy</a>
+                <a class="hover:text-black" href="#">Privacy policy</a>
+                <a class="hover:text-black" href="#">Refund policy</a>
             </div>
         </div>
         <div class='flex flex-col items-start m-2'>
@@ -39,8 +39,8 @@
             <button>Subscribe</button>
         </div>
     </div>
-    <div class='flex justify-center mt-10'>
+    <div class='flex justify-center items-center mt-10'>
         <i class="uil uil-copyright"></i>
-        <p>ArtLonge2022</p>
+        <p>veannes2022</p>
     </div>
 </div>
