--- a/shop/templates/confirm_payment.html
+++ b/shop/templates/confirm_payment.html
@@ -1,20 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="flex justify-center">
+<div class="flex justify-center items-start min-h-screen">
    
     {% if transaction and transaction.is_finished %}
 
-        <div class="flex flex-col justify-center mt-20">
+        <div class="flex flex-col text-xl justify-center relative top-56">
             <p>Transaction complete</p>
             <p>Amount: {{transaction.amount}} </p>
             <p>Receipt No. {{transaction.receipt_number}} </p>
         </div>
     {% else %}
     
-        <div class="flex justify-center mt-20">
+        <div class="flex text-xl justify-center relative top-56">
             <i class="uil uil-spinner animate-spin text-xl"></i>
-            <p>Listening for your transaction</p>
+            <p class="ml-5">Listening for your transaction</p>
         </div>
 
     {% endif %}
