--- a/shop/templates/product_detail.html
+++ b/shop/templates/product_detail.html
@@ -2,13 +2,13 @@
 
 
 {% block content %}
-{% include 'nav.html' %}
+
 <div class="p-5 md:p-20 flex flex-col items-center  relative min-h-screen">
     
     <div class="flex flex-col items-start">
         <div class="back flex justify-start items-center cursor-pointer group my-10">
             <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
-            <p class="ml-2">Continue shopping</p>
+            <p class="ml-2 text-xl">Continue shopping</p>
         </div>
         <div class="latest sm:flex ">
             <div class="md:w-96">
