--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,8 +1,9 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
-    <title>Ecom Classic</title>
+		<title>Ecom Classic</title>
 		<!-- <script src="https://kit.fontawesome.com/bc4deb0f1d.js" crossorigin="anonymous" defer></script> -->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,15 +20,18 @@
 	</head>
 
 	<body class="bg-backgroundPrimary text-textPrimary">
-		<div class="messages h-fit z-50">
-			{% if messages %}
+
+		{% if messages %}
+		<div class="absolute bg-backgroundPrimary messages h-fit z-50">
 			<ul class="messages">
 				{% for message in messages %}
 				<li>{{ message }}</li>
 				{% endfor %}
 			</ul>
-			{% endif %}
 		</div>
+		{% endif %}
+
+		{% include 'nav.html' %}
 		<div class="">
 			{% block content %}
 
