--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,21 +1,14 @@
 <nav
-    class="nav z-10 bg-backgroundSecondary flex flex-row py-20 px-11 md:px-16 xl:px-64  justify-between w-full text-xl xl:text-2xl text-textPrimary">
+    class="nav z-10  flex flex-row py-20 px-11 md:px-16 xl:px-64  justify-between w-full text-xl xl:text-2xl text-textPrimary">
     <div class="logo">
         <h1>Veannes</h1>
     </div>
     <div class="nav-items">
         <ul class="flex justify-between">
             <a href="/shop" class="mr-10 hover:text-textSecondary hover:underline">Home</a>
-            <div class="dropdown flex flex-col relative justify-between  mr-10">
-                <a href="/shop/products" class="hover:text-textSecondary flex hover:underline">
-                    <i class="uil uil-angle-double-down"></i>
-                    <p>Products</p> 
-                </a>
-                <div class="dropdown-items flex flex-col relative left-6">
-                    <a href="/shop/category/Painting" class="hover:text-textSecondary hover:underline">Paintings</a>
-                    <a href="/shop/category/T-Shirt" class="hover:text-textSecondary hover:underline">T-Shirts</a>
-                </div>
-            </div>
+            <a href="/shop/products" class="mr-10 hover:text-textSecondary hover:underline">
+                Products
+            </a>
             <a href="/shop/search" class="search mr-10 hover:text-textSecondary"><i class="uil uil-search"></i></a>
             <a href="/shop/cart" class="search flex hover:text-textSecondary">
                 <i class="uil uil-shopping-cart"></i>
