--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -2,18 +2,16 @@
 {% load static %}
 
 {% block content %}
-<div class="shop w-full mb-20 relative h-fit text-textPrimary">
+<div class="shop w-full mb-20 px-3 md:px-20 xl:px-44 relative h-fit text-textPrimary">
 
 
-    <div class="products px-3 md:px-20 flex flex-col items-center h-fit ">
-        {% if best_sellers %}
+    <div class="products flex flex-col items-center h-fit ">
+        {% if latest_product %}
 
         <div class="flex flex-col items-center  text-textPrimary">
-            <h1 class="text-2xl p-10 underline text-textSecondary">Best sellers</h1>
-
             <div
                 class="best-sellers grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap sm:px-20 md:px-40 items-center">
-                {% for product in best_sellers %}
+                {% for product in latest_product %}
 
                 {% include 'product.html' %}
 
@@ -28,51 +26,44 @@
             </a>
         </div>
         {% endif %}
-        <div class="w-full flex my-32 justify-center">
-            <a href="/shop/category/Painting" class="hover:text-black w-2/3 md:w-96">
-                <div class="relative group">
-                    <img class="group-hover:opacity-50 transition duration-300 ease-in-out"
-                        src="{% static 'backgrounds/artwork-display.jpg' %}" alt="">
-                    <p
-                        class="absolute bottom-5 left-3 font-bold text-black underline group-hover:scale-110 transition duration-300 ease-in-out">
-                        ARTWORKS</p>
+
+        <div class="w-full flex my-32 justify-center flex-wrap">
+            {% for category in categories %}
+            <a href="/shop/category/{{category.name}}" class="hover:text-textSecondary">
+                <div class="w-fit h-20 px-2 md:px-4 xl:px-6 flex items-center bg-backgroundSecondary rounded mx-2 my-4 opacity-80
+                hover:opacity-100 transition duration-300 ease-out
+                ">
+                    <p class="font-bold text-xl md:text-2xl xl:text-3xl">{{category.name}}</p>
                 </div>
             </a>
-            <a href="/shop/category/T-Shirt" class="hover:text-black w-1/3 md:w-64">
-                <div class="relative group">
-                    <img class="group-hover:opacity-50 transition duration-300 ease-in-out"
-                        src="{% static 'backgrounds/tshirts-display.jpg' %}" alt="">
-                    <p
-                        class="absolute bottom-5 left-3 text-black font-bold underline group-hover:scale-110 transition duration-300 ease-in-out">
-                        T-SHIRTS</p>
-                </div>
-            </a>
+            {% endfor %}
         </div>
-        {% if latest_product %}
-        <div class="flex flex-col items-start text-textPrimary">
-
-            <h1 class="text-2xl p-10 underline">New release</h1>
-            <div class="latest sm:flex">
-                <div class="md:w-96">
-                    <img src="{{latest_product.image_url}}" alt="latest_product" />
-                </div>
-                <div class="m-4 sm:m-8 flex flex-col justify-between">
-                    <div>
-                        <h1 class="text-2xl">{{latest_product.name}}</h1>
-                        <p class="text-xl">ksh {{latest_product.price}}</p>
-                        <hr />
+        {% if discounts %}
+        <div
+            class="best-sellers grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap sm:px-20 md:px-40 items-center">
+            {% for discount in discounts %}
+            <a href="/shop/product/{{discount.product.id}}" class="text-textPrimary hover:text-black">
+                <div
+                    class="hover:scale-105 group transition duration-200 ease-in my-20 p-2 relative  h-72 rounded-lg  text-black">
+                    <img src="{{discount.product.image_url}}" alt="{{discount.product.name}}-image"
+                        class="h-full rounded-none group-hover:opacity-80 transition duration-300 ease-in">
+                    <div class="absolute top-1/2 left-1/4">
+                        <p class="text-2xl -rotate-45 bg-backgroundSecondary px-2">{{discount.percentage}}% off!</p>
                     </div>
-
-                    <div class="m-2">
-                        <button class="update-cart border-2 flex group py-2 px-4 w-56"
-                            data-productId={{latest_product.id}} data-action='add'>
-                            <p> Add to cart</p>
-                            <i
-                                class="uil uil-arrow-right group-hover:translate-x-14 group-hover:visible transform duration-300 ease-in-out ml-2"></i>
-                        </button>
+                    <div class="flex justify-between items-center text-textPrimary">
+                        <div class="p-3">
+                            <h2 class="font-semibold">{{discount.product.name}}</h2>
+                            <p>ksh {{discount.new_price}}</p>
+                            <p class="text-textSecondary">{{discount.product.inventory}} left</p>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
+            {% endfor %}
+        </div>
+        {% else %}
+        <div class="flex justify-center">
+            <p>Keep an eye out for the best discount offers.</p>
         </div>
         {% endif %}
     </div>
