--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -42,7 +42,7 @@
         {% endfor %}
         <div class="group flex justify-end">
             <a href="/shop/checkout" class="text-textPrimary hover:text-textSecondary">
-                <button class="flex justify-between bg-backgroundSecondary px-4 py-2 mr-5 rounded-lg w-fit">
+                <button class="flex justify-between border border-backgroundSecondary px-4 py-2 mr-5 rounded-lg w-fit">
                     <p class="mr-3">Continue shopping</p>
                 </button>
             </a>
