--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -53,6 +53,7 @@
                     <div class="flex justify-between items-center text-textPrimary">
                         <div class="p-3">
                             <h2 class="font-semibold">{{discount.product.name}}</h2>
+                            <p class="line-through">ksh {{discount.product.price}}</p>
                             <p>ksh {{discount.new_price}}</p>
                             <p class="text-textSecondary">{{discount.product.inventory}} left</p>
                         </div>
