--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,8 +5,8 @@
     </div>
     <div class="nav-items">
         <ul class="flex justify-between">
-            <a href="/shop" class="mr-10 hover:text-textSecondary hover:underline">Home</a>
-            <a href="/shop/products" class="mr-10 hover:text-textSecondary hover:underline">
+            <a href="/shop" class="mr-10 hover:text-textSecondary">Home</a>
+            <a href="/shop/products" class="mr-10 hover:text-textSecondary">
                 Products
             </a>
             <a href="/shop/search" class="search mr-10 hover:text-textSecondary"><i class="uil uil-search"></i></a>
