--- a/templates/product.html
+++ b/templates/product.html
@@ -1,12 +1,23 @@
 <a href="/shop/product/{{product.id}}" class="text-textPrimary hover:text-black">
-<div class="hover:scale-105 group transition duration-200 ease-in my-20 p-2  h-72 rounded-lg  text-black">
-    <img src="{{product.image_url}}" alt="{{product.name}}-image" class="h-full rounded-none group-hover:opacity-80 transition duration-300 ease-in">
-    <div class="flex justify-between items-center text-textPrimary">
-        <div class="p-3">
-            <h2 class="font-semibold">{{product.name}}</h2>
-            <p>ksh {{product.price}}</p>
-            <p class="text-textSecondary">{{product.inventory}} left</p>
+    <div class="hover:scale-105 group relative transition duration-200 ease-in my-20 p-2  h-72 rounded-lg  text-black">
+        <img src="{{product.image_url}}" alt="{{product.name}}-image"
+            class="h-full rounded-none group-hover:opacity-80 transition duration-300 ease-in">
+        {% if product.has_discount %}
+        <div class="absolute top-1/2 left-1/4">
+            <p class="text-2xl -rotate-45 bg-backgroundSecondary px-2">{{product.discount.percentage}}% off!</p>
+        </div>
+        {% endif %}
+        <div class="flex justify-between items-center text-textPrimary">
+            <div class="p-3">
+                <h2 class="font-semibold">{{product.name}}</h2>
+                {% if product.has_discount %}
+                <p class="line-through">ksh {{product.price}}</p>
+                <p>ksh {{product.discount.new_price}}</p>
+                {% else %}
+                <p>ksh {{product.price}}</p>
+                {% endif %}
+                <p class="text-textSecondary">{{product.inventory}} left</p>
+            </div>
         </div>
     </div>
-</div>
 </a>
