--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -17,6 +17,7 @@
 		<!-- Tailwind css -->
 		{% tailwind_css %}
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
+		<script src="https://kit.fontawesome.com/cc80d12428.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body class="bg-backgroundPrimary text-textPrimary">
